# prompt-palette

./: .gitignore  LICENSE  PRIVACY_POLICY.md  README.md  index.html  launcher.html  package-lock.json  package.json  prompt-palette-requirements.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
msix/: AppxManifest.xml  build-msix.ps1  generate-assets.py
src/: App.tsx  desktop.ts  launcher.css  launcher.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  launcher-capability.json  main-capability.json
src-tauri/src/: commands.rs  db.rs  interpolation.rs  main.rs  migrations.rs  models.rs  paste.rs
src/components/: CategoryIcon.tsx  CategoryManager.tsx  ImportExport.tsx  Launcher.tsx  Onboarding.tsx  Settings.tsx  Sidebar.tsx  TagManager.tsx  TemplateEditor.tsx  TemplateList.tsx  Toast.tsx  VariablePackageManager.tsx
src/i18n/: en.json  index.ts  ja.json
