[package]
name = "prompt-palette"
version = "0.1.0"
description = "Prompt Palette - global text insertion launcher"
authors = ["yuki5"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
ulid = "1"
enigo = "0.3"
chrono = "0.4"
regex = "1"
tauri-plugin-dialog = "2.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
